# geospatial_project_example

./: .gitignore  README.md  environment.yml  pyproject.toml
data/example_images/1/: month_1_band_B02.tif  month_1_band_B03.tif  month_1_band_B04.tif  month_1_band_B08.tif
data/example_images/10/: month_10_band_B02.tif  month_10_band_B03.tif  month_10_band_B04.tif  month_10_band_B08.tif
data/example_images/11/: month_11_band_B02.tif  month_11_band_B03.tif  month_11_band_B04.tif  month_11_band_B08.tif
data/example_images/12/: month_12_band_B02.tif  month_12_band_B03.tif  month_12_band_B04.tif  month_12_band_B08.tif
data/example_images/2/: month_2_band_B02.tif  month_2_band_B03.tif  month_2_band_B04.tif  month_2_band_B08.tif
data/example_images/3/: month_3_band_B02.tif  month_3_band_B03.tif  month_3_band_B04.tif  month_3_band_B08.tif
data/example_images/4/: month_4_band_B02.tif  month_4_band_B03.tif  month_4_band_B04.tif  month_4_band_B08.tif
data/example_images/5/: month_5_band_B02.tif  month_5_band_B03.tif  month_5_band_B04.tif  month_5_band_B08.tif
data/example_images/6/: month_6_band_B02.tif  month_6_band_B03.tif  month_6_band_B04.tif  month_6_band_B08.tif
data/example_images/7/: month_7_band_B02.tif  month_7_band_B03.tif  (+2 more)
notebooks/: example.ipynb  example_refactored.ipynb  model_development.ipynb  s2scan.ipynb  s2sr_gcerdata.py
presentation/: presentation.html  presentation.ipynb
src/landcovergcer/: s2sr_gcerdata.py
src/mygeopackage/: data_loader.py  data_structures.py  files_scan.py  stack_operations.py  vegetation_indices.py
(+10 files in other folders)
